--- a/src/Components/PageLayout/PageLayout.module.scss
+++ b/src/Components/PageLayout/PageLayout.module.scss
@@ -57,7 +57,7 @@
 	}
 
 	.footer {
-		margin-left: auto;
+		// Footer now handles its own centering
 	}
 }
 
